@startuml Class_Diagram
!theme plain

title Class Diagram Sistem E-Commerce Ravazka

' Styling
skinparam class {
    BackgroundColor White
    ArrowColor SeaGreen
    BorderColor SeaGreen
}

' Classes Definition
class User {
  + id: Integer
  + name: String
  + email: String
  + role: String
  + created_at: DateTime
  + updated_at: DateTime
  --
  + isAdmin(): Boolean
}

class Product {
  + id: Integer
  + name: String
  + slug: String
  + price: Decimal
  + weight: String
  + description: Text
  + stock: Integer
  + image: String
  + created_at: DateTime
  + updated_at: DateTime
  --
  + updateInventoryStock(quantity: Integer): void
}

class Inventory {
  + id: Integer
  + name: String
  + category: String
  + stock: Integer
  + purchase_price: Decimal
  + created_at: DateTime
  + updated_at: DateTime
  --
  + updateStock(quantity: Integer): void
}

class Order {
  + id: Integer
  + order_number: String
  + user_id: Integer
  + customer_name: String
  + customer_email: String
  + customer_phone: String
  + customer_address: Text
  + shipping_method: String
  + total_amount: Decimal
  + payment_method: String
  + status: String
  + created_at: DateTime
  + updated_at: DateTime
  --
  + getStatusLabels(): Array
  + generateOrderNumber(): String
}

class OrderItem {
  + id: Integer
  + order_id: Integer
  + product_id: Integer
  + product_name: String
  + quantity: Integer
  + price: Decimal
  + created_at: DateTime
}

class Cart {
  + id: Integer
  + session_id: String
  + user_id: Integer
  + product_id: Integer
  + quantity: Integer
  + price: Decimal
  + created_at: DateTime
}

' Relationships
User "1" -- "0..*" Order : has
User "1" -- "0..*" Cart : has

Order "1" -- "1..*" OrderItem : contains

Product "1" -- "0..*" OrderItem : includes
Product "1" -- "0..*" Cart : appears in

Inventory "1" -- "1..*" Product : manages

@enduml